msm: mdss: Add KCAL support for post processing control [v2]
Change-Id: Iab79048d945c5913fdfaf4a85f20d835b025090c

--- a/arch/arm64/configs/haruhi_defconfig
+++ b/arch/arm64/configs/haruhi_defconfig
@@ -590,3 +590,6 @@ CONFIG_TRUSTY_VIRTIO=y
 CONFIG_TRUSTY_VIRTIO_IPC=y
 CONFIG_SLIMBUS_MSM_CTRL=y
 # CONFIG_EXFAT_DEBUG is not set
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+
+
